--- a/examples/hello/Makefile
+++ b/examples/hello/Makefile
@@ -1,3 +1,3 @@
 .PHONY: build
 build:
-	componentize-go --world hello componentize --output build/hello.wasm
+	componentize-go --world hello build --output build/hello.wasm
